# factors

./: Cargo.toml  Justfile  README.md
crates/factors/: Cargo.toml  README.md
crates/factors/src/: error.rs  lib.rs  registry.rs  traits.rs
crates/factors/src/growth/: asset_growth.rs  book_equity_growth.rs  earnings_growth.rs  employee_growth.rs  mod.rs  sales_growth.rs
crates/factors/src/liquidity/: amihud.rs  bid_ask_spread.rs  corwin_schultz.rs  days_to_cover.rs  dollar_volume.rs  kyle_lambda.rs  mod.rs  relative_volume.rs  roll.rs  short_interest.rs  turnover.rs
crates/factors/src/momentum/: acceleration.rs  high_52week.rs  long_term.rs  ma_crossover.rs  mean_reversion.rs  medium_term.rs  mod.rs  price_volume_trend.rs  residual.rs  rsi.rs  short_term.rs  time_series.rs  volatility_breakout.rs  volume_momentum.rs
crates/factors/src/quality/: accruals.rs  altman_z.rs  asset_turnover.rs  cashflow_quality.rs  current_ratio.rs  earnings_persistence.rs  earnings_smoothness.rs  gross_profitability.rs  interest_coverage.rs  leverage.rs  margins.rs  mod.rs  piotroski.rs  quick_ratio.rs  roa.rs  roe.rs  roic.rs
crates/factors/src/sentiment/: analyst_revisions.rs  earnings_surprise.rs  insider_trading.rs  institutional_ownership.rs  mod.rs  short_term_reversal.rs
crates/factors/src/size/: enterprise_value.rs  log_mcap.rs  market_cap.rs
crates/factors/src/value/: book_to_price.rs  dividend_yield.rs  earnings_yield.rs  ebitda_to_ev.rs  enterprise_yield.rs  fcf_yield.rs  mod.rs  sales_to_price.rs
crates/factors/src/volatility/: beta.rs  downside_beta.rs  historical_vol.rs  idio_vol.rs  iv_rv_spread.rs  kurtosis.rs  max_drawdown.rs  mod.rs  parkinson.rs  skewness.rs  var.rs
crates/fd-factors/: Cargo.toml  README.md
crates/fd-factors/src/: lib.rs  registry.rs  standardize.rs
crates/fd-factors/src/growth/: book_equity_growth.rs  earnings_growth.rs  mod.rs  sales_growth.rs
crates/fd-factors/src/liquidity/: amihud.rs  corwin_schultz.rs  days_to_cover.rs  kyle_lambda.rs  mod.rs  relative_volume.rs  turnover.rs
crates/fd-factors/src/momentum/: long_term.rs  mod.rs  price_volume_trend.rs  residual.rs  volume_momentum.rs
crates/fd-factors/src/quality/: accruals.rs  altman_z.rs  asset_turnover.rs  earnings_persistence.rs  earnings_smoothness.rs  interest_coverage.rs  leverage.rs  margins.rs  mod.rs  quick_ratio.rs  roa.rs  roe.rs  roic.rs
crates/fd-factors/src/sentiment/: institutional_ownership.rs
crates/fd-factors/src/size/: enterprise_value.rs  market_cap.rs  mod.rs
crates/fd-factors/src/value/: dividend_yield.rs  earnings_yield.rs  mod.rs  sales_to_price.rs
crates/fd-factors/src/volatility/: downside_beta.rs  idio_vol.rs  kurtosis.rs  mod.rs  skewness.rs  var.rs
