[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/factordynamics/factors"
repository = "https://github.com/factordynamics/factors"
authors = ["Factor Dynamics"]
keywords = ["factor-model", "quantitative-finance", "equity", "alpha", "risk"]
categories = ["finance", "mathematics", "science"]

[workspace]
resolver = "2"
members = ["crates/*", "bin"]
default-members = ["bin"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[workspace.dependencies]
# Utilities - ordered by line length (waterfall style)
rand = "0.9"
futures = "0.3"
approx = "0.5.1"
rstest = "0.26.1"
thiserror = "2.0"
serde_json = "1.0"
indicatif = "0.18"
toraniko-math = "0.1.3"
toraniko-utils = "0.1.3"
toraniko-model = "0.1.3"
toraniko-styles = "0.1.3"
toraniko-traits = "0.1.3"
toraniko-primitives = "0.1.3"
clap = { version = "4", features = ["derive"] }
ndarray = { version = "0.17", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
factors-bin = { version = "0.2.1", path = "bin" }
derive_more = { version = "2", features = ["display", "from", "into", "deref"] }
factors = { version = "0.2.1", path = "crates/factors", default-features = false }
toraniko = { version = "0.1.3", default-features = false, features = ["full"] }
polars = { version = "0.46", default-features = false, features = ["abs", "dtype-date", "dtype-datetime", "lazy", "log", "rank", "rolling_window", "streaming"] }
