[package]
name = "factors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Unified factor library for alpha and risk models"

[package.metadata.cargo-udeps.ignore]
normal = ["toraniko-math", "toraniko-traits"]
development = ["rstest", "approx"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
polars.workspace = true
thiserror.workspace = true
derive_more.workspace = true
toraniko-math.workspace = true
toraniko-traits.workspace = true

[dev-dependencies]
rstest.workspace = true
approx.workspace = true
